--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis'
+
 }
 
 /**
@@ -21,4 +23,5 @@ dependencies {
  */
 dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
+//    implementation group: 'redis.clients', name: 'jedis'
 }
