--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
   port: 8090
-logging:
-  level:
-    com.bnk: INFO
+#logging:
+#  level:
+#    com.bnk: INFO
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
